...
    Scaffold(
        floatingActionButton = {
            FloatingActionButton(onClick = {
                showDialog = true
                dishToEdit = null // Reinicia dishToEdit al agregar un nuevo platillo
                }) {
                Icon(imageVector = Icons.Default.Add, contentDescription = "Agregar platillo")
            }
        }
    ) { paddingValues ->
        Column( //Columna usada para el manejo del dialog
            modifier = Modifier
                .fillMaxSize()
...
